--- a/src/Quillo_backend/Cargo.toml
+++ b/src/Quillo_backend/Cargo.toml
@@ -12,3 +12,5 @@ crate-type = ["cdylib"]
 candid = "0.10"
 ic-cdk = "0.13"
 ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
+serde = "1.0.126"
+serde_derive = "1.0.126"
