--- a/src/Quillo_backend/Cargo.toml
+++ b/src/Quillo_backend/Cargo.toml
@@ -14,3 +14,4 @@ ic-cdk = "0.13"
 ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
 serde = "1.0.126"
 serde_derive = "1.0.126"
+ic-stable-structures = "0.5.6"
