--- a/src/Quillo_backend/Cargo.toml
+++ b/src/Quillo_backend/Cargo.toml
@@ -15,3 +15,4 @@ ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need ti
 serde = "1.0.126"
 serde_derive = "1.0.126"
 ic-stable-structures = "0.5.6"
+ic-cdk-macros= "0.14.0"
