--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build-backend":"cd src/Quillo_backend && cargo build",
        "clean-backend":"cd src/Quillo_backend && cargo clean",
     "acp": "git add . && git commit -m \"$MESSAGE\" && git push origin \"$BRANCH\"",
+    "frontend":"cd src/Quillo_frontend && npm run start",
   "prepare": "cd src/Quillo_backend/src/assets && curl -o download_latest_icrc1_ledger.sh 'https://raw.githubusercontent.com/dfinity/ic/326df23607fc8280a047daba2d8462f1dfc57466/rs/rosetta-api/scripts/download_latest_icrc1_ledger.sh' && chmod +x download_latest_icrc1_ledger.sh && ./download_latest_icrc1_ledger.sh"
 
   },
