--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reorg",
+  "name": "Quillo_frontend",
   "author": "reorg",
   "private": true,
   "version": "0.1.0",
@@ -16,6 +16,7 @@
     "@dfinity/auth-client": "^1.3.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -23,8 +24,9 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "lottie-react": "^2.4.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.5",
     "vite-plugin-environment": "^1.1.3"
