--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -29,7 +29,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.5",
-    "vite-plugin-environment": "^1.1.3"
+    "vite-plugin-environment": "^1.1.3",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.2",
