--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.5",
     "vite-plugin-environment": "^1.1.3",
