--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
     "node": ">=16.0.0",
     "npm": ">=7.0.0"
   },
-  "name": "Quillo",
+  "name": "reorg",
   "scripts": {
     "build": "npm run build --workspaces --if-present",
     "prebuild": "npm run prebuild --workspaces --if-present",
     "pretest": "npm run prebuild --workspaces --if-present",
     "start": "npm start --workspaces --if-present",
     "test": "npm test --workspaces --if-present",
-    "deploy": " ./did.sh &&  dfx generate Quillo_frontend && dfx generate Quillo_backend && dfx deploy -y",
+    "deploy": " ./did.sh && dfx generate Quillo_backend && dfx start --clean",
     "publish": "dfx deploy --network ic ",
-    "build-backend":"cd src/Quillo_backend && cargo build",
-       "clean-backend":"cd src/Quillo_backend && cargo clean",
+    "build-backend": "cd src/Quillo_backend && cargo build",
+    "clean-backend": "cd src/Quillo_backend && cargo clean",
     "acp": "git add . && git commit -m \"$MESSAGE\" && git push origin \"$BRANCH\"",
-    "frontend":"cd src/Quillo_frontend && npm run start",
-  "prepare": "cd src/Quillo_backend/src/assets && curl -o download_latest_icrc1_ledger.sh 'https://raw.githubusercontent.com/dfinity/ic/326df23607fc8280a047daba2d8462f1dfc57466/rs/rosetta-api/scripts/download_latest_icrc1_ledger.sh' && chmod +x download_latest_icrc1_ledger.sh && ./download_latest_icrc1_ledger.sh"
-
+    "frontend": "cd src/Quillo_frontend && npm run start",
+    "prepare": "cd src/Quillo_backend/src/assets && curl -o download_latest_icrc1_ledger.sh 'https://raw.githubusercontent.com/dfinity/ic/326df23607fc8280a047daba2d8462f1dfc57466/rs/rosetta-api/scripts/download_latest_icrc1_ledger.sh' && chmod +x download_latest_icrc1_ledger.sh && ./download_latest_icrc1_ledger.sh"
   },
   "type": "module",
   "workspaces": [
