--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pretest": "npm run prebuild --workspaces --if-present",
     "start": "npm start --workspaces --if-present",
     "test": "npm test --workspaces --if-present",
-    "deploy": " ./did.sh && dfx generate Quillo_backend && dfx start --clean",
+    "deploy": "./did.sh &&  dfx generate Quillo_frontend && dfx generate Quillo_backend && dfx deploy -y",
     "publish": "dfx deploy --network ic ",
     "build-backend": "cd src/Quillo_backend && cargo build",
     "clean-backend": "cd src/Quillo_backend && cargo clean",
