--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reorg",
+  "name": "Quillo_frontend",
   "author": "reorg",
   "private": true,
   "version": "0.1.0",
@@ -14,6 +14,7 @@
   "dependencies": {
     "@dfinity/agent": "^1.3.0",
     "@dfinity/auth-client": "^1.3.0",
+    "@dfinity/principal": "^1.4.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
