--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -30,6 +30,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.5",
     "vite-plugin-environment": "^1.1.3",
     "zustand": "^4.5.4"
