Add a loading spinner

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "type": "module",
   "workspaces": [
     "src/Quillo_frontend"
-  ]
+  ],
+  "dependencies": {
+    "react-spinners": "^0.14.1"
+  }
 }
