view tokens page

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "npm start --workspaces --if-present",
     "test": "npm test --workspaces --if-present",
     "deploy": "./did.sh &&  dfx generate Quillo_frontend && dfx generate Quillo_backend && dfx deploy -y",
-    "publish": "dfx deploy --network ic ",
+    "publish": " ./did.sh && dfx deploy Quillo_backend --network ic ",
+    "new": "dfx build && dfx deploy --network ic",
     "build-backend": "cd src/Quillo_backend && cargo build",
     "clean-backend": "cd src/Quillo_backend && cargo clean",
     "acp": "git add . && git commit -m \"$MESSAGE\" && git push origin \"$BRANCH\"",
