--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -19,21 +19,6 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.4.5",
-    "framer-motion": "^11.2.10",
-    "lottie-react": "^2.4.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.2.0",
-    "react-loader-spinner": "^6.1.6",
-    "react-modern-calendar-datepicker": "^3.1.6",
-    "react-router-dom": "^6.23.1",
-    "react-toastify": "^10.0.5",
-    "sass": "^1.77.5",
-    "vite-plugin-environment": "^1.1.3",
-    "zustand": "^4.5.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -41,11 +26,28 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.2.10",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.294.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-modern-calendar-datepicker": "^3.1.6",
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "sass": "^1.77.5",
     "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-environment": "^1.1.3",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.2",
@@ -54,13 +56,13 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   }
 }
