--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "src/Quillo_frontend"
   ],
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "react-spinners": "^0.14.1"
   }
 }
