--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -43,6 +43,7 @@
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "sass": "^1.77.5",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
@@ -53,6 +54,7 @@
     "@types/node": "^20.10.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/recharts": "^1.8.29",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
