--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -17,6 +17,7 @@
     "@dfinity/principal": "^1.4.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mdx-js/rollup": "^3.0.1",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -37,13 +38,18 @@
     "framer-motion": "^11.2.10",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.294.0",
+    "Quillo_frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
+    "react-markdown": "^9.0.1",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "sass": "^1.77.5",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
