--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -17,6 +17,7 @@
     "@dfinity/principal": "^1.4.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@funded-labs/plug-mobile-sdk": "^0.1.3",
     "@mdx-js/rollup": "^3.0.1",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
