--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -56,6 +56,7 @@
     "sass": "^1.77.5",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.3",
     "vite-plugin-environment": "^1.1.3",
     "zustand": "^4.5.4"
   },
