--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -44,10 +44,12 @@
     "Quillo_frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
