--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -48,6 +48,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
     "react-modern-calendar-datepicker": "^3.1.6",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
