--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.0.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.294.0",
     "Quillo_frontend": "file:",
@@ -64,6 +65,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.12",
     "@types/node": "^20.10.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
