--- a/src/Quillo_frontend/package.json
+++ b/src/Quillo_frontend/package.json
@@ -35,6 +35,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@web5/api": "^0.10.0",
     "@web5/credentials": "^1.0.3",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.4.5",
@@ -62,6 +63,7 @@
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.3",
     "vite-plugin-environment": "^1.1.3",
+    "web3": "^4.13.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
